Force clean slate redeploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,4 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: dist/
           server-dir: ./
-          dangerous-clean-slate: false
+          dangerous-clean-slate: true
